2014-03-27  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset--restore-frame): Remove workaround for bug#14795
	which is no longer needed and causes trouble in GTK builds (bug#17046).

	* emacs-lisp/package-x.el (package--archive-contents-from-url):
	Use url-insert-file-contents; package-handle-response no longer exists.

2014-03-26  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/package.el: Fix bug#16733 (again).
	(url-http-parse-response, url-http-end-of-headers, url-recreate-url)
	(url-http-target-url): Remove unused declarations.
	(package-handle-response): Remove.
	(package--with-work-buffer): Use url-insert-file-contents and simplify.
	(package--download-one-archive): Use current-buffer instead of
	dynamic binding of `buffer'.
	(describe-package-1): Do not decode readme-string.

2014-03-25  Barry O'Reilly  <gundaetiapo@gmail.com>

	* simple.el (primitive-undo): Correction to 2014-03-24 change.

2014-03-25  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-methods, tramp-connection-timeout): Fix docstring.

	* net/tramp-sh.el (tramp-sh-handle-vc-registered): Revert change
	from 2014-03-07, it decreases performance unnecessarily.  Let-bind
	`remote-file-name-inhibit-cache' to nil in the second pass.
	(tramp-find-executable): Do not call "which" on SunOS.
	(tramp-send-command-and-check): Fix docstring.
	(tramp-do-copy-or-rename-file-directly): In the `rename' case,
	check whether source directory has set the sticky bit.

2014-03-24  Barry O'Reilly  <gundaetiapo@gmail.com>

	* simple.el (primitive-undo): Only process marker adjustments
	validated against their corresponding (TEXT . POS).  Issue warning
	for lone marker adjustments in undo history.  (Bug#16818)
	(undo-make-selective-list): Add marker adjustments to selective
	undo list based on whether their corresponding (TEXT . POS) is in
	the region.  Remove variable adjusted-markers, which was unused
	and only non nil during undo-make-selective-list.