@@ -1,3 +1,9 @@
+2014-03-27  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* progmodes/ruby-mode.el (ruby-syntax-propertize-function):
+	Don't propertize `?' or `!' as symbol constituent when after
+	colon.  (Bug#17097)
+
 2014-03-27  Juanma Barranquero  <lekktu@gmail.com>
 
 	* frameset.el (frameset--restore-frame): Remove workaround for bug#14795
